# confluence-gateway

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
confluence_gateway/adapters/confluence/: client.py  models.py
confluence_gateway/adapters/vector_db/: __init__.py  base_adapter.py  chroma_adapter.py  factory.py  models.py  qdrant_adapter.py
confluence_gateway/api/: app.py  dependencies.py
confluence_gateway/api/routes/: __init__.py  search.py
confluence_gateway/api/schemas/: requests.py  responses.py
confluence_gateway/core/: config.py  exceptions.py
confluence_gateway/providers/embedding/: base.py  factory.py  litellm.py  sentence_transformer.py
confluence_gateway/services/: __init__.py  embedding.py  indexing.py  search.py
tests/: conftest.py
tests/adapters/confluence/: test_client.py  test_models.py
tests/api/schemas/: test_schemas.py
tests/core/: test_config.py  test_exceptions.py
tests/integration/: test_e2e_flow.py
tests/services/: test_search.py
