[project]
name = "confluence-gateway"
version = "0.1.0"
description = ""
authors = [
    {name = "nj.jo",email = "jonamjun.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "litellm>=1.65.0",
    "pydantic>=2.11.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
    "typing-extensions>=4.13.0",
]

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long
]
fixable = ["E", "F", "I", "UP"]
format = true
target-version = "py39"
src = [
    "confluence_gateway",
    "tests",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["E402", "F811"]

[tool.mypy]
python_version = "3.9"
plugins = "pydantic.mypy"
show_error_codes = true
warn_redundant_casts = true
