[project]
name = "confluence-gateway"
version = "0.1.0"
description = ""
authors = [
    {name = "nj.jo",email = "jonamjun.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "atlassian-python-api>=4.0.3",
    "chromadb>=0.6.3",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "litellm>=1.65.3",
    "pydantic>=2.11.2",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.13.3",
    "requests>=2.32.3",
    "sentence-transformers>=4.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.4",
]

[tool.ruff]
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP",   # pyupgrade
]
lint.ignore = [
    "E501",  # line too long
]
lint.fixable = ["E", "F", "I", "UP"]
target-version = "py39"
src = [
    "confluence_gateway",
    "tests",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F811", "F401", "F403", "F405"]

[tool.mypy]
python_version = "3.9"
plugins = "pydantic.mypy"
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_return_any = false
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_explicit = false
disallow_any_generics = false
ignore_missing_imports = true
implicit_optional = true

[[tool.mypy.overrides]]
module = "pydantic.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "confluence_gateway.adapters.*"
